# qt5platform-plugins

./: .clog.toml  .gitignore  .project  .qmake.conf  .syncexclude  CHANGELOG.md  CMakeLists.txt  README.md  README.zh_CN.md  clog.toml  dxcb.patch  dxcbbackingstore.cpp  dxcbbackingstore.h  dxcbintegration.cpp  genericplugin.cpp  genericplugin.h  global.h  groups  linglong.yaml  main.cpp  project.config  qt5dxcb-plugin.pro  qt5platform-plugins.pro  utility.cpp  utility.h  vtablehook.cpp  vtablehook.h  xcbwindowhook.cpp  xcbwindowhook.h
tests/: CMakeLists.txt  main.cpp  test-recoverage.sh  test.h
tests/src/: ut_dapplicationeventmonitor.cpp  ut_dbackingstoreproxy.cpp  ut_ddesktopinputselectioncontrol.cpp  ut_dframewindow.cpp  ut_dinputselectionhandle.cpp  ut_dnativesettings.cpp  ut_dnotitlebarwindowhelper.cpp  ut_dopenglpaintdevice.cpp  ut_dxcbxsettings.cpp  ut_global.cpp  ut_utility.cpp
wayland/dwayland/: CMakeLists.txt  dhighdpi.cpp  dhighdpi.h  dnotitlebarwindowhelper_wl.cpp  dnotitlebarwindowhelper_wl.h  dplatformnativeinterfacehook.cpp  dplatformnativeinterfacehook.h  dwayland.cmake  dwayland.json  dwayland.pro  dwaylandintegration.cpp  dwaylandintegration.h  dwaylandinterfacehook.cpp  dwaylandinterfacehook.h  dxsettings.cpp  dxsettings.h  main.cpp
wayland/wayland-shell/: CMakeLists.txt  blureffect.cpp  blureffect.h  dkeyboard.cpp  dkeyboard.h  dwaylandshellmanager.cpp  dwaylandshellmanager.h  dwaylandshellmanagerv2.cpp  dwaylandshellmanagerv2.h  kwayland-shell.json  main.cpp  qt5dwayland-plugin_global.h  qt5dwaylandplugin.cpp  qt5dwaylandplugin.h  shell_common.h  wayland-shell.cmake  wayland-shell.pro  wayland_depends.pri
xcb/: CMakeLists.txt  dforeignplatformwindow.h  dforeignplatformwindow_x11.cpp  dframewindow.cpp  dframewindow.h  dhighdpi.cpp  dhighdpi.h  dnativesettings.cpp  dnativesettings.h  dnotitlebarwindowhelper.cpp  dnotitlebarwindowhelper.h  dplatformbackingstore.cpp  dplatformbackingstore.h  dplatformbackingstorehelper.cpp  dplatformbackingstorehelper.h  dplatforminputcontexthook.cpp  dplatforminputcontexthook.h  dplatformintegration.cpp  dplatformintegration.h  dplatformnativeinterfacehook.cpp  dplatformnativeinterfacehook.h  dplatformopenglcontexthelper.cpp  dplatformopenglcontexthelper.h  dplatformwindowhelper.cpp  dplatformwindowhelper.h  dplatformwindowhook.cpp  dplatformwindowhook.h  dpp.json  dwmsupport.h  dxcbwmsupport.cpp  dxcbwmsupport.h  dxcbxsettings.cpp  dxcbxsettings.h  libqt5xcbqpa.pri  linux.cmake  linux.pri  main.cpp  utility.h  utility_x11.cpp  windoweventhook.cpp  (+5 more)
xcb/cursors/: cursor.qrc
xcb/libqt5xcbqpa-dev/5.10.0/: qxcbcursor.h  qxcbdrag.h  qxcbintegration.h  qxcbkeyboard.h  qxcbnativeinterface.h
xcb/libqt5xcbqpa-dev/5.10.1/: qxcbbackingstore.h  qxcbconnection.h  qxcbdrag.h  qxcbscreen.h  qxcbsystemtraytracker.h  qxcbwindow.h
xcb/libqt5xcbqpa-dev/5.11.0/: qxcbbackingstore.h  qxcbconnection.h  qxcbkeyboard.h  qxcbscreen.h
xcb/libqt5xcbqpa-dev/5.11.1/: qxcbconnection.h  qxcbwindow.h
xcb/libqt5xcbqpa-dev/5.11.2/: qxcbconnection.h  qxcbintegration.h  qxcbnativeinterface.h  qxcbscreen.h  qxcbvulkaninstance.h  qxcbwindow.h  qxcbxsettings.h
xcb/libqt5xcbqpa-dev/5.11.3/: qxcbbackingstore.h  qxcbconnection.h  qxcbdrag.h  qxcbscreen.h
xcb/libqt5xcbqpa-dev/5.12.0/: qxcbbackingstore.h  qxcbclipboard.h  qxcbconnection.h  qxcbeventdispatcher.h  qxcbeventqueue.h  qxcbmime.h  qxcbscreen.h  qxcbwindow.h
xcb/libqt5xcbqpa-dev/5.12.1/: qxcbatom.h  qxcbeventqueue.h  qxcbintegration.h
xcb/libqt5xcbqpa-dev/5.12.2/: qxcbconnection.h  qxcbconnection_basic.h
xcb/libqt5xcbqpa-dev/5.12.3/: qxcbclipboard.h  qxcbcursor.h  qxcbeventdispatcher.h  qxcbkeyboard.h  qxcbscreen.h
xcb/libqt5xcbqpa-dev/5.12.4/: qxcbwindow.h
xcb/libqt5xcbqpa-dev/5.12.6/: qxcbatom.h  qxcbconnection.h  qxcbdrag.h  qxcbscreen.h  qxcbsessionmanager.h
xcb/libqt5xcbqpa-dev/5.12.7/: qxcbnativeinterface.h  qxcbvulkanwindow.h  qxcbwindow.h
xcb/libqt5xcbqpa-dev/5.12.8/: qxcbatom.h  qxcbconnection_basic.h  qxcbvulkaninstance.h
xcb/libqt5xcbqpa-dev/5.12.9/: qxcbdrag.h  qxcbimage.h  qxcbwindow.h
xcb/libqt5xcbqpa-dev/5.13.0/: qxcbconnection.h  qxcbconnection_basic.h  qxcbvulkanwindow.h
xcb/libqt5xcbqpa-dev/5.14.0/: qxcbbackingstore.h  qxcbconnection.h  qxcbdrag.h  qxcbeventdispatcher.h  qxcbintegration.h  qxcbkeyboard.h  qxcbwindow.h
xcb/libqt5xcbqpa-dev/5.14.1/: qxcbconnection_basic.h  qxcbeventqueue.h  qxcbwindow.h
xcb/libqt5xcbqpa-dev/5.15.0/: qxcbclipboard.h  qxcbwindow.h
xcb/libqt5xcbqpa-dev/5.15.1/: qxcbdrag.h  qxcbscreen.h  qxcbwindow.h
xcb/libqt5xcbqpa-dev/5.15.2/: qxcbconnection.h  qxcbeventqueue.h  qxcbscreen.h  qxcbsessionmanager.h  qxcbwindow.h
xcb/libqt5xcbqpa-dev/5.15.3/: qxcbatom.h  qxcbeventqueue.h  qxcbkeyboard.h
xcb/libqt5xcbqpa-dev/5.15.4/: qxcbeventqueue.h  qxcbobject.h  qxcbscreen.h  qxcbsystemtraytracker.h
xcb/libqt5xcbqpa-dev/5.15.5/: qxcbconnection_basic.h  qxcbcursor.h  qxcbmime.h  qxcbscreen.h
xcb/libqt5xcbqpa-dev/5.3.0/: qxcbbackingstore.h  qxcbconnection.h  qxcbdrag.h  qxcbmime.h  qxcbwindow.h  qxcbxsettings.h
xcb/libqt5xcbqpa-dev/5.3.1/: qglxintegration.h  qxcbbackingstore.h  qxcbconnection.h  qxcbcursor.h  qxcbkeyboard.h  qxcbnativeinterface.h  qxcbwindow.h
xcb/libqt5xcbqpa-dev/5.3.2/: qglxintegration.h  qxcbbackingstore.h  qxcbclipboard.h  qxcbconnection.h  qxcbkeyboard.h  qxcbscreen.h  qxcbsessionmanager.h
xcb/libqt5xcbqpa-dev/5.4.0/: qxcbbackingstore.h  qxcbconnection.h  qxcbdrag.h  qxcbintegration.h  qxcbmime.h  qxcbnativeinterface.h  qxcbobject.h  qxcbscreen.h  qxcbsystemtraytracker.h  qxcbwindow.h  qxcbwmsupport.h
xcb/libqt5xcbqpa-dev/5.4.1/: qxcbconnection.h  qxcbintegration.h  qxcbnativeinterface.h  qxcbwindow.h  qxcbwmsupport.h
xcb/libqt5xcbqpa-dev/5.4.2/: qglxintegration.h  qxcbconnection.h  qxcbdrag.h  qxcbkeyboard.h  qxcbscreen.h  qxcbxsettings.h
xcb/libqt5xcbqpa-dev/5.5.0/: qxcbbackingstore.h  qxcbconnection.h  qxcbscreen.h  qxcbsystemtraytracker.h  qxcbwindow.h
xcb/libqt5xcbqpa-dev/5.5.1/: qxcbbackingstore.h  qxcbconnection.h  qxcbcursor.h  qxcbdrag.h  qxcbexport.h  qxcbintegration.h  qxcbkeyboard.h  (+3 more)
(+297 files in other folders)
